--- a/hithere-1.0/debian/control
+++ b/hithere-1.0/debian/control
@@ -8,7 +8,7 @@ Homepage: http://www.keep.pt/
 
 Package: hithere
 Architecture: all 
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends: ${shlibs:Depends}, ${ftdi1:Depends}, ${misc:Depends}
 Description: This is a dummy package with a hello world echo script 
  This is the long descriptin...
  This is the long description...
