--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ hithere-1.0/hithere
 *.swp
 freedomboxalarm-1.0/debian/freedomboxalarm/
 freedomboxalarm-1.0/freedomboxalarm
+freedomboxcountdown-1.0/debian/freedomboxcountdown/
